[DSR-109] Fixing docs hamburger alignment on mobile
* Refactoring the global header
* Switching Docs Site breakpoints to Thorium breakpoints
* Removing padding from global header

--- a/docs/assets/scss/_header.scss
+++ b/docs/assets/scss/_header.scss
@@ -11,13 +11,21 @@ Description:  Documentation Site global header
 
 */
 
-#site-header {
+.docs-header {
   height: 68px;
   background-color: $color-purple;
   text-align: center;
 
-  .logo {
+  @include from-breakpoint(large) {
+    text-align: left;
+  }
+
+  &__logo {
     margin-left: -3.813rem;
+
+    @include from-breakpoint(large) {
+      margin-left: 0;
+    }
   }
 
   img {
@@ -26,8 +34,7 @@ Description:  Documentation Site global header
     padding: 20px;
   }
 
-  .toggle {
-    color: #fff;
+  &__toggle {
     font-size: 2rem;
     margin: 0;
     background: rgba(255, 255, 255, .1);
@@ -35,19 +42,22 @@ Description:  Documentation Site global header
     float: left;
     width: auto;
     min-width: 0;
-  }
-}
 
-@media screen and (min-width: 960px) {
-  #site-header {
-    text-align: left;
-
-    .logo {
-      margin-left: 0;
-    }
-
-    .toggle {
+    @include from-breakpoint(large) {
       display: none;
     }
+  }
+
+  &__icon {
+    color: #fff;
+
+    &:hover {
+      color: #fff;
+    }
+  }
+
+  &__container {
+    padding-left: 0;
+    padding-right: 0;
   }
 }
